_Layout Fix So Register Is Right Aligned

--- a/wwwroot/css/site.css
+++ b/wwwroot/css/site.css
@@ -54,3 +54,9 @@ body {
   height: 60px;
   line-height: 60px; /* Vertically center the text there */
 }
+
+/*New*/
+/*.ml-auto .dropdown-menu {
+    left: auto !important;
+    right: 0px;
+}*/
